# stryke-office

./: Cargo.toml  Makefile  README.md  stryke.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  report.html
examples/: document_and_pdf.stk  excel_to_charts.stk  image.stk  presentation.stk  spreadsheet.stk
lib/: Office.stk
src/: barcode.rs  chart_render.rs  chart_svg.rs  doc_formats.rs  doc_struct.rs  extract.rs  image_ops.rs  lib.rs  meta_ops.rs  pdf_attach.rs  pdf_build.rs  pdf_form.rs  pdf_ops.rs  pdf_outline.rs  pptx_write.rs  tests.rs  textops.rs
t/: test_office.stk  test_office_wrappers.stk  test_stryke_office_surface.stk
