[package]
name = "stryke-office"
version = "0.9.0"
edition = "2021"
description = "Office + image I/O for stryke: Excel/Word/PowerPoint, OpenDocument, PDF, PIL-style images — all native, no external binaries"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-office"
homepage = "https://menketechnologies.github.io/stryke-office/"
publish = false

[lib]
name = "stryke_office"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# All format support is native — no soffice/libreoffice/pandoc subprocess.
calamine = "0.35"          # read xlsx/ods/xls + csv
rust_xlsxwriter = "0.95"   # write xlsx
lo_odf = "0.4"             # write ods/odt/odp (OpenDocument serializers)
lo_core = "0.4"            # ODF data models + self-contained PDF read/write (no font files)
lopdf = { version = "0.40", default-features = false }  # PDF parse/merge/split/rotate (pure-Rust core; no chrono/rayon/tokio)
docx-rs = "0.4"            # write docx
zip = "2"                  # read OOXML/ODF containers; write pptx
quick-xml = "0.40"         # parse/emit the XML inside those containers
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
once_cell = "1"
regex = "1"                # regex matching/extraction for text + sheet ops (foundational, vendorable)
image = { version = "0.25", features = ["avif"] }   # all raster codecs incl AVIF decode (PIL core)
imageproc = "0.27"       # drawing: text, lines, rects, circles
ab_glyph = "0.2"         # font rasterization for text drawing
qrcode = { version = "0.14", default-features = false }            # QR-code matrix generation (pure Rust; rendered via image crate)
barcoders = { version = "2", default-features = false, features = ["std"] }  # 1D barcodes: Code128/39/93/11, EAN-13/8, UPC-A, Codabar, ITF

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
